crates/system/src/snapshots/telmo_system__ui__tests__confirm_dialog.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 90, 22)"
---

                                                   ..'
                                               ,xNMM.
                                             .OMMMMo
                                             lMM"
                                   .;loddo:.  .olloddol;.
                                 cKMMMMMMMMMMNWMMMMMMMMMM0:
                               .KMMMMMMMMMMMMMMMMMMMMMMMWd.
                      ╭─ Restart swift? ───────────────────────────╮
                      │                                            │
                      │  Open apps will be asked to close.         │
                      │                                            │
                      │  ↵ restart   esc cancel                    │
                      ╰────────────────────────────────────────────╯
                                'XMMMMMMMMMMMMMMMMMMMMMMMMK.
                                  kMMMMMMMMMMMMMMMMMMMMMMd
                                   ;KMMMMMMMWXXWMMMMMMMk.
                                     "cooc*"    "*coo'"



 l lock  s sleep  r restart  p shut down  k force quit  ? more                  ‹ rain ›
