crates/system/src/snapshots/telmo_system__ui__tests__footer_after_success_then_back_to_keys.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 90, 22)"
---

                                                   ..'
                                               ,xNMM.
                                             .OMMMMo
                                             lMM"
                                   .;loddo:.  .olloddol;.
                                 cKMMMMMMMMMMNWMMMMMMMMMM0:
                               .KMMMMMMMMMMMMMMMMMMMMMMMWd.
                               XMMMMMMMMMMMMMMMMMMMMMMMX.
                              ;MMMMMMMMMMMMMMMMMMMMMMMM:
                              :MMMMMMMMMMMMMMMMMMMMMMMM:
                              .MMMMMMMMMMMMMMMMMMMMMMMMX.
                               kMMMMMMMMMMMMMMMMMMMMMMMMWd.
                               'XMMMMMMMMMMMMMMMMMMMMMMMMMMk
                                'XMMMMMMMMMMMMMMMMMMMMMMMMK.
                                  kMMMMMMMMMMMMMMMMMMMMMMd
                                   ;KMMMMMMMWXXWMMMMMMMk.
                                     "cooc*"    "*coo'"



                           ✓ swift is on generation 279 · 0:12
