crates/system/src/snapshots/telmo_system__ui__tests__footer_while_rebuilding.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 90, 22)"
---

                                                   ..'
                                               ,xNMM.
                                             .OMMMMo
                                             lMM"
                                   .;loddo:.  .olloddol;.
                                 cKMMMMMMMMMMNWMMMMMMMMMM0:
                               .KMMMMMMMMMMMMMMMMMMMMMMMWd.
                               XMMMMMMMMMMMMMMMMMMMMMMMX.
                              ;MMMMMMMMMMMMMMMMMMMMMMMM:
                              :MMMMMMMMMMMMMMMMMMMMMMMM:
                              .MMMMMMMMMMMMMMMMMMMMMMMMX.
                               kMMMMMMMMMMMMMMMMMMMMMMMMWd.
                               'XMMMMMMMMMMMMMMMMMMMMMMMMMMk
                                'XMMMMMMMMMMMMMMMMMMMMMMMMK.
                                  kMMMMMMMMMMMMMMMMMMMMMMd
                                   ;KMMMMMMMWXXWMMMMMMMk.
                                     "cooc*"    "*coo'"



              - rebuilding swift   ━━━━━━━───────────   48/120 built · 0:06
