crates/system/src/snapshots/telmo_system__ui__tests__main_screen.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 90, 22)"
---





















 l lock  s sleep  r restart  p shut down  o log out  ? more                     ‹ rain ›
