crates/system/src/snapshots/telmo_system__ui__tests__narrow_footer.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 60, 22)"
---

                                    ..'
                                ,xNMM.
                              .OMMMMo
                              lMM"
                    .;loddo:.  .olloddol;.
                  cKMMMMMMMMMMNWMMMMMMMMMM0:
                .KMMMMMMMMMMMMMMMMMMMMMMMWd.
                XMMMMMMMMMMMMMMMMMMMMMMMX.
               ;MMMMMMMMMMMMMMMMMMMMMMMM:
               :MMMMMMMMMMMMMMMMMMMMMMMM:
               .MMMMMMMMMMMMMMMMMMMMMMMMX.
                kMMMMMMMMMMMMMMMMMMMMMMMMWd.
                'XMMMMMMMMMMMMMMMMMMMMMMMMMMk
                 'XMMMMMMMMMMMMMMMMMMMMMMMMK.
                   kMMMMMMMMMMMMMMMMMMMMMMd
                    ;KMMMMMMMWXXWMMMMMMMk.
                      "cooc*"    "*coo'"



 l    s 󰒲   r 󰜉   p ⏻   o 󰍃   u rebuild   ?      ‹ rain ›
