crates/system/src/snapshots/telmo_system__ui__tests__switch_toast.snap
---
source: crates/system/src/ui.rs
expression: "render(&app, 90, 22)"
---




















                          plasma   ○ ● ○ ○ ○ ○ ○ ○ ○ ○ ○ ○ ○ ○ ○
 l    s 󰤄   r 󰜉   p ⏻   o 󰍃   u 󰣪   k 󰅜   ?                                  ‹ plasma ›
